# ymlfxr

./: Cargo.toml  README.md  bad.yaml
src/: main.rs
testdata/: bad.yaml  bar.yaml  foo.yaml  functest.sh
