[package]
name = "ymlfxr"
version = "0.3.2"
authors = ["Brett Smith <bc.smith@sas.com>"]
edition = "2018"
description = "rust cli for formating yaml v1.2 that passes yamllint with default settings"
homepage = "https://github.com/xbcsmith/ymlfxr"
license = "Apache-2.0"
keywords = ["yaml", "yamllint"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
yaml-rust = "0.4"
ulid = "0.3.1"
bytebuffer = "0.2.1"
